Make parser save binary content to file Improve AV and Spam logging